--- a/react-app/src/components/DirectMessages/DMIndex/DMIndex.css
+++ b/react-app/src/components/DirectMessages/DMIndex/DMIndex.css
@@ -43,7 +43,7 @@
 	padding-left: 10px;
 	border-left: solid 1px rgba(255, 255, 255, 0.13);
 	/* overflow-x: hidden; */
-	height: 20px;
+	height: 22px;
 	box-sizing: border-box;
 	white-space: nowrap;
 	overflow: clip;
@@ -58,6 +58,9 @@
 
 #purple.dm-names {
 	color: #864f8b;
+}
+#light.dm-names {
+	color: #00000097;
 }
 
 .empty-friend-pic {
